--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
   },
   "main": "index.js",
   "dependencies": {
-    "data.task": "3.1.2",
-    "lodash.differenceby": "4.8.0",
-    "lodash.isequal": "4.5.0",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "data.task": "^3.1.2",
+    "lodash.differenceby": "^4.8.0",
+    "lodash.isequal": "^4.5.0",
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "^0.57.4"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.9.0",
-    "eslint-plugin-flowtype": "3.2.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-react-native": "3.5.0"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0"
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
