Edit example proj. package.json.

--- a/example/package.json
+++ b/example/package.json
@@ -1,25 +1,19 @@
 {
   "name": "example",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "test": "jest"
+    "ios": "react-native run-ios"
   },
   "dependencies": {
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4",
-    "react-native-image-layout": "1.0.0"
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "^0.57.4",
+    "react-native-image-layout": "^1.0.0"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.0",
-    "react-test-renderer": "16.6.0-alpha.8af6728"
-  },
-  "jest": {
-    "preset": "react-native"
+    "metro-react-native-babel-preset": "^0.49.0",
+    "react-test-renderer": "^16.6.0-alpha.8af6728"
   }
 }
