--- a/package.json
+++ b/package.json
@@ -57,11 +57,7 @@
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
     "lint": "./node_modules/.bin/eslint index.js src/"
   },
-  "license": "MIT",
-  "jest": {
-    "preset": "react-native"
-  }
+  "license": "MIT"
 }
