--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.3",
+  "version": "1.1.4",
   "name": "react-native-image-layout",
   "description": "An easy and simple to use React Native component to render a custom masonry layout for remote images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.",
   "keywords": [
@@ -15,6 +15,9 @@
     "double tap",
     "camera roll",
     "pictures",
+    "animated",
+    "animation",
+    "photo",
     "ios",
     "android"
   ],
