--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.11",
+  "version": "2.0.0",
   "name": "react-native-image-layout",
   "description": "An easy and simple to use React Native component to render a custom masonry layout for remote images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.",
   "keywords": [
@@ -42,8 +42,7 @@
   "dependencies": {
     "react-native-gallery-swiper": "^1.0.2",
     "data.task": "^3.1.2",
-    "lodash.differenceby": "^4.8.0",
-    "lodash.isequal": "^4.5.0"
+    "lodash.differenceby": "^4.8.0"
   },
   "peerDependencies": {
     "react": "*",
