--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react-native-gallery-swiper": "^1.0.2",
     "data.task": "^3.1.2",
     "lodash.differenceby": "^4.8.0"
@@ -49,6 +50,8 @@
     "react-native": "*"
   },
   "devDependencies": {
+    "react": "^16.6.3",
+    "react-native": "^0.57.7",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.9.0",
     "eslint-plugin-flowtype": "^3.2.0",
