--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "2.0.4",
   "name": "react-native-image-layout",
-  "description": "An easy and simple to use React Native component to render a custom masonry layout for remote images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.",
+  "description": "An easy and simple to use React Native component to render a custom masonry layout for remote images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.  Free and made possible along with costly maintenance and updates by [Lue Hang](https://www.facebook.com/lue.hang) (the author).",
   "keywords": [
     "react-native-image-layout",
     "react-native",
