--- a/example/ios/ReactNativeImageLayoutExample.xcodeproj/xcshareddata/xcschemes/ReactNativeImageLayoutExample.xcscheme
+++ b/example/ios/ReactNativeImageLayoutExample.xcodeproj/xcshareddata/xcschemes/ReactNativeImageLayoutExample.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "example.app"
-               BlueprintName = "example"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "ReactNativeImageLayoutExample.app"
+               BlueprintName = "ReactNativeImageLayoutExample"
+               ReferencedContainer = "container:ReactNativeImageLayoutExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "exampleTests.xctest"
-               BlueprintName = "exampleTests"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "ReactNativeImageLayoutExampleTests.xctest"
+               BlueprintName = "ReactNativeImageLayoutExampleTests"
+               ReferencedContainer = "container:ReactNativeImageLayoutExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "exampleTests.xctest"
-               BlueprintName = "exampleTests"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "ReactNativeImageLayoutExampleTests.xctest"
+               BlueprintName = "ReactNativeImageLayoutExampleTests"
+               ReferencedContainer = "container:ReactNativeImageLayoutExample.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "example.app"
-            BlueprintName = "example"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "ReactNativeImageLayoutExample.app"
+            BlueprintName = "ReactNativeImageLayoutExample"
+            ReferencedContainer = "container:ReactNativeImageLayoutExample.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "example.app"
-            BlueprintName = "example"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "ReactNativeImageLayoutExample.app"
+            BlueprintName = "ReactNativeImageLayoutExample"
+            ReferencedContainer = "container:ReactNativeImageLayoutExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "example.app"
-            BlueprintName = "example"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "ReactNativeImageLayoutExample.app"
+            BlueprintName = "ReactNativeImageLayoutExample"
+            ReferencedContainer = "container:ReactNativeImageLayoutExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
