--- a/example/package.json
+++ b/example/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "example",
+  "name": "react-native-image-layout-example",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios"
+    "ios": "react-native run-ios",
+    "android": "react-native run-android"
   },
   "dependencies": {
-    "react": "16.6.1",
-    "react-native": "0.57.5",
-    "react-native-image-layout": "^2.0.0"
+    "react-native-image-layout": "^3.0.0",
+    "prop-types": "15.6.2",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
+    "react-native-fast-image": "5.1.1"
   },
   "devDependencies": {
-    "metro-react-native-babel-preset": "0.49.2",
-    "react-test-renderer": "16.6.1"
+    "data.task": "3.1.2",
+    "metro-react-native-babel-preset": "0.51.0",
+    "react-native-gallery-swiper": "^1.4.2",
+    "react-test-renderer": "16.6.3"
   }
 }
