--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "2.0.14",
   "name": "react-native-image-layout",
-  "description": "An easy and simple to use React Native component to render a custom masonry layout for remote images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.  Free and made possible along with costly maintenance and updates by [Lue Hang](https://www.facebook.com/lue.hang) (the author).",
+  "description": "An easy and simple to use React Native component to render a custom masonry layout for remote/local images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.  Free and made possible along with costly maintenance and updates by [Lue Hang](https://www.facebook.com/lue.hang) (the author).",
   "keywords": [
     "react-native-image-layout",
     "react-native",
@@ -38,10 +38,9 @@
     "example": "./example",
     "src": "./src"
   },
-  "main": "index.js",
+  "main": "./src/index.js",
   "files": [
     "/src",
-    "index.js",
     "LICENSE",
     "package.json",
     "README.md"
