--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
   ],
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react-native-gallery-swiper": "^1.0.2",
-    "data.task": "^3.1.2",
-    "lodash.differenceby": "^4.8.0"
+    "react-native-gallery-swiper": "^1.4.2",
+    "data.task": "^3.1.2"
   },
   "peerDependencies": {
     "react": "*",
