Upgraded Android's gallery to react-native-smart-gallery.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   ],
   "dependencies": {
     "prop-types": "^15.6.2",
+    "react-native-smart-gallery": "^1.0.0",
     "react-native-gallery-swiper": "^1.20.1",
     "react-native-masonry-list": "^2.8.1",
     "data.task": "^3.1.2"
