Updated example proj.

--- a/example/package.json
+++ b/example/package.json
@@ -7,11 +7,10 @@
     "android": "react-native run-android"
   },
   "dependencies": {
-    "react-native-image-layout": "^3.0.1",
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-fast-image": "5.1.1"
+    "react-native-image-layout": "^5.0.0"
   },
   "devDependencies": {
     "metro-react-native-babel-preset": "0.51.0",
