--- a/example/package.json
+++ b/example/package.json
@@ -1,19 +1,26 @@
 {
   "name": "react-native-image-layout-example",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios": "react-native run-ios",
-    "android": "react-native run-android"
+    "android": "react-native run-android",
+    "test": "jest"
   },
   "dependencies": {
-    "prop-types": "15.6.2",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "react-native-image-layout": "^5.0.0"
+    "react": "16.8.3",
+    "react-native": "0.59.8",
+    "react-native-image-layout": "^5.1.0"
   },
   "devDependencies": {
-    "metro-react-native-babel-preset": "0.51.0",
-    "react-test-renderer": "16.6.3"
+    "@babel/core": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
