--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "5.1.2",
+  "version": "5.1.3",
   "name": "react-native-image-layout",
   "description": "An easy and simple to use React Native component to render a custom masonry layout for remote/local images and displayed on a custom interactive image viewer.  Includes animations and support for both iOS and Android.  Free and made possible along with costly maintenance and updates by [Lue Hang](https://www.facebook.com/lue.hang) (the author).",
   "keywords": [
@@ -19,7 +19,11 @@
     "animation",
     "photo",
     "ios",
-    "android"
+    "android",
+    "LueHsoft",
+    "LueH LABS",
+    "Lue Hang",
+    "luehang"
   ],
   "homepage": "https://github.com/Luehang/react-native-image-layout",
   "author": {
