--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "Lue Hang",
     "luehang"
   ],
-  "homepage": "https://github.com/Luehang/react-native-image-layout",
+  "homepage": "https://luehangs.site/lue_hang/projects/react-native-image-layout",
   "author": {
     "name": "Lue Hang",
     "email": "lue_hang@hotmail.com",
