--- a/example/package.json
+++ b/example/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ReactNativeImageLayoutExample",
-  "version": "2.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios": "react-native run-ios",
     "android": "react-native run-android",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
-    "react": "16.8.6",
-    "react-native": "0.60.4",
+    "react": "16.8.3",
+    "react-native": "0.59.10",
     "react-native-image-layout": "^5.1.3"
   },
   "devDependencies": {
@@ -20,7 +19,7 @@
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
